--- a/profile/style.css
+++ b/profile/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .main-content {
-    box-shadow: 0 0 10px gray;
+    box-shadow: 0 0 10px black;
     text-align: center;
     font-family: arial;
 }
